<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewHello"
                android:layout_width="wrap_content"
                android:layout_height="390dp"
                android:contentDescription="@string/hello_icon"
                app:srcCompat="@drawable/hello_icon" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/introduction"
                android:textColor="#3F7EB3"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="#3F7EB3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tips"
                android:textColor="#3F7EB3"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageViewProduct"
                android:layout_width="wrap_content"
                android:layout_height="390dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/product_icon"
                app:srcCompat="@drawable/product_icon" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/functions"
                android:textColor="#3F7EB3"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="#3F7EB3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/update"
                android:textColor="#3F7EB3"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageViewXP"
                android:layout_width="wrap_content"
                android:layout_height="390dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/experience_icon"
                app:srcCompat="@drawable/experience" />

            <TextView
                android:id="@+id/textViewXP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/experience"
                android:textColor="#3F7EB3"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enjoy"
                android:textColor="#3F7EB3"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonWebsite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="Learn more"
                    android:textColor="#FFFFFF"
                    app:backgroundTint="#6BA7CC" />

                <Button
                    android:id="@+id/buttonNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    app:backgroundTint="#6BA7CC"
                    android:text="Next"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <TextView
                android:id="@+id/emptyTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/empty"
                android:textSize="36sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>